# MongoDataBase

./: .gitignore  bot.py  config.py  main.py  mongo_crud.py  pyproject.toml  shemas.py
app/: exceptions.py  main.py  mongo_crud.py  utils.py
